(lang dune 3.3)
(name thread-table)
(generate_opam_files true)
(source (github ocaml-multicore/thread-table))
(authors "Vesa Karvonen <vesa.a.j.k@gmail.com>")
(maintainers "Vesa Karvonen <vesa.a.j.k@gmail.com>")
(homepage "https://github.com/ocaml-multicore/thread-table")
(license "0BSD")
(package (name thread-table)
 (synopsis "A lock-free thread-safe integer keyed hash table")
 (depends
  (ocaml (>= 4.08))
  (mdx (and (>= 1.10.0) :with-test))
  (alcotest (and (>= 1.7.0) :with-test))))
(using mdx 0.2)
